[dependencies]
# Asynchronous runtime
tokio = { version = "1.18", features = ["full"] }

# gRPC library
tonic = "0.9.1"
prost = "0.11.5"

# Database integration
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros"] }

# Redis client
redis = { version = "0.23.0", features = ["tokio-comp"] }

# Environment variable management
dotenv = "0.15.0"

# Logging and tracing
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# For code generation
[build-dependencies]
tonic-build = "0.9.1"
