[package]
name = "high_performance_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Asynchronous runtime
tokio = { version = "1.18", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

# gRPC library
tonic = "0.9.1"
prost = "0.11.5"

# Database integration
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }

# Redis client
redis = { version = "0.23.0", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager"] }

# Environment variable management
dotenv = "0.15.0"

# Logging and tracing
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# Utils
once_cell = "1.18"  # Added for static initialization

# For code generation
[build-dependencies]
tonic-build = "0.9.1"